--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,17 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.pyc
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.tiff
+*.svg
+*.webp
+*.ico
+*.heif
+*.avif
 
 env/
 db.sqlite3
